--- a/sass/home.scss
+++ b/sass/home.scss
@@ -7,7 +7,7 @@ main{
             position: relative;
             width: 100%;
             height: calc(100vh + 100px);
-            background-image: url("/assets/home.jpg");
+            background-image: url("../../assets/home.jpg");
             background-position: 75% 50%;
             background-size: cover;
             display: flex;
