--- a/sass/home.scss
+++ b/sass/home.scss
@@ -106,6 +106,7 @@ main{
         h3{
             font-size: 3rem;
             font-family: Logo;
+            font-weight: 500;
             text-align: center;
             padding: 20px 0px 50px 0px;
         }
@@ -121,7 +122,7 @@ main{
                 position: relative;
                 width: 20rem;
                 height: 20rem;
-                box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -5px;
+                box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
                 overflow: hidden;
                 display: flex;
                 flex-direction: column;
@@ -133,13 +134,14 @@ main{
                     right: 10px;
                     width: 110px;
                     height: 50px;
-                    background-image: url("/assets/price.png");
+                    background-image: url("../../assets/price.png");
                     background-size: contain;
                     background-repeat: no-repeat;
                     background-position: 50%, 50%;
                     display: flex;
                     justify-content: end;
                     align-items: center;
+                    z-index: 1;
                     .precio{
                         color: rgb(255, 255, 255);
                         text-shadow: 0 0 10px #000000;
@@ -179,6 +181,7 @@ main{
                 .vino_img{
                     width: 80%;
                     height: 80%;
+                    transition: transform 300ms ease-out;
                 }
                 .variedad_xs{
                     color: #9b9b9b;
@@ -187,26 +190,23 @@ main{
                     font-size: 1.2rem;
                     font-weight: 300;
                 }
-                &:hover{
-                    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
-                }
-                &:hover .slaid{
-                    top: 0;
-                    opacity: 1;
+                &:hover .vino_img{
+                    transform: scale(1.02);
                 }
             }
             .slaid{
                 display: none;
                 position: absolute;
                 color: rgb(0, 0, 0);
-                background-color: #ffffff9d;
+                background-color: #ffffffb2;
                 width: 100%;
                 height: 100%;
                 top: 10%;
                 flex-direction: column;
-                justify-content: center;
+                justify-content: end;
                 align-items: center;
                 gap: 10px;
+                padding-bottom: 30px;
                 opacity: 0;
                 transition: all 0.5s ease;
                 cursor: pointer;
@@ -217,6 +217,7 @@ main{
                     font-style: italic;
                 }
                 .variedad{
+                    color: #676767;
                     font-size: 1.2rem;
                 }
                 .bodega{
