--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -226,6 +226,7 @@
         .modal-title{
             font-size: 3rem;
             font-family: Logo;
+            font-weight: 500;
             text-align: center;
             margin-bottom: 15px;
         }
@@ -264,9 +265,31 @@
                         display: flex;
                         flex-direction: column;
                         align-items: center;
+                        width: 50px;
+                        height: 50px;
+                        p{
+                            flex: 1;
+                        }
+                        .cant-carrito{
+                            flex: 1;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            .arrow-carrito{
+                                cursor: pointer;
+                                font-size: 1.1rem;
+                                &:hover{
+                                    color: $colorRed;
+                                }
+                            }
+                        }
                     }
                     .delete-item{
                         font-size: 1.2rem;
+                        transition: color 300ms ease;
+                        &:hover{
+                            color: $colorRed;
+                        }
                     }
                 }
             }
