--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -48,6 +48,26 @@
                     font-size: 1.2rem;
                     vertical-align: middle;
                 }
+                .cant-carrito-total{
+                    opacity: 0;
+                    position: absolute;
+                    top: -5px;
+                    left: 10px;
+                    width: 20px;
+                    height: 20px;
+                    border-radius: 50% 50%;
+                    background-color: $colorRed;
+                    color: #ffffff;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    p{
+                        font-size: 0.8rem;
+                    }
+                }
+                .cant-carrito-total-show{
+                    opacity: 1;
+                }
             }
             .active span{
                 width: 100%;
