--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -665,13 +665,15 @@ main .contact-conten {
   gap: 30px;
   justify-content: center;
   align-items: center;
-  background-color: #740000;
+  background-color: #a80000;
   width: 100%;
   height: 350px;
   position: relative;
   z-index: 0;
+  padding-bottom: 50px;
 }
 main .contact-conten .form-contact {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -716,11 +718,86 @@ main .contact-conten .form-contact .contact-email .email-ok {
   width: 100px;
   background-color: #000;
 }
+main .contact-conten .form-contact .contact-email .chackEmail {
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+}
+main .contact-conten .form-contact .contact-email .chackEmailShow {
+  opacity: 1;
+}
+main .contact-conten .form-contact .contact-email .shake-horizontal {
+  -webkit-animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
+  animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
+}
 main .contact-conten .form-contact .contact-text .contact-text-textarea {
   resize: vertical;
   min-height: 50px;
   max-height: 100px;
 }
+main .contact-conten .form-contact .buttonContacto {
+  position: absolute;
+  background-color: transparent;
+  bottom: -60px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 60%;
+  height: 40px;
+  border: none;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+  transition: all 500ms ease;
+  cursor: pointer;
+  outline: none;
+  font-size: 1rem;
+  overflow: hidden;
+}
+main .contact-conten .form-contact .buttonContacto span {
+  position: absolute;
+  background: #000000;
+  transition: 0.5s;
+}
+main .contact-conten .form-contact .buttonContacto span:nth-child(1) {
+  width: 100%;
+  height: 2px;
+  top: 0;
+  left: -100%;
+}
+main .contact-conten .form-contact .buttonContacto span:nth-child(2) {
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  right: -100%;
+}
+main .contact-conten .form-contact .buttonContacto span:nth-child(3) {
+  width: 2px;
+  height: 100%;
+  bottom: -100%;
+  left: 0;
+}
+main .contact-conten .form-contact .buttonContacto span:nth-child(4) {
+  width: 2px;
+  height: 100%;
+  top: -100%;
+  right: 0;
+}
+main .contact-conten .form-contact .buttonContacto:hover span:nth-child(1) {
+  left: 0;
+}
+main .contact-conten .form-contact .buttonContacto:hover span:nth-child(2) {
+  right: 0;
+}
+main .contact-conten .form-contact .buttonContacto:hover span:nth-child(3) {
+  bottom: 0;
+}
+main .contact-conten .form-contact .buttonContacto:hover span:nth-child(4) {
+  top: 0;
+}
+main .contact-conten .form-contact .buttonContacto:hover {
+  font-size: 1.1rem;
+}
+
 footer {
   position: absolute;
   width: 100%;
@@ -741,6 +818,50 @@ footer .copyright {
   }
   100% {
     transform: translateX(25%);
+  }
+}
+@-webkit-keyframes shake-horizontal {
+  0%, 100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  10%, 30%, 50%, 70% {
+    -webkit-transform: translateX(-10px);
+    transform: translateX(-10px);
+  }
+  20%, 40%, 60% {
+    -webkit-transform: translateX(10px);
+    transform: translateX(10px);
+  }
+  80% {
+    -webkit-transform: translateX(8px);
+    transform: translateX(8px);
+  }
+  90% {
+    -webkit-transform: translateX(-8px);
+    transform: translateX(-8px);
+  }
+}
+@keyframes shake-horizontal {
+  0%, 100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  10%, 30%, 50%, 70% {
+    -webkit-transform: translateX(-10px);
+    transform: translateX(-10px);
+  }
+  20%, 40%, 60% {
+    -webkit-transform: translateX(10px);
+    transform: translateX(10px);
+  }
+  80% {
+    -webkit-transform: translateX(8px);
+    transform: translateX(8px);
+  }
+  90% {
+    -webkit-transform: translateX(-8px);
+    transform: translateX(-8px);
   }
 }
 @media (min-width: 1000px) {
