--- a/sass/home.scss
+++ b/sass/home.scss
@@ -250,12 +250,14 @@ main{
         gap: 30px;
         justify-content: center;
         align-items: center;
-        background-color: #740000;
+        background-color: #a80000;
         width: 100%;
         height: 350px;
         position: relative;
         z-index: 0;
+        padding-bottom: 50px;
         .form-contact{
+            position: relative;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -307,6 +309,20 @@ main{
                 .contact-email-label{
                     @extend .contact-nombre-label;
                 }
+                .chackEmail{
+                    opacity: 0;
+                    position: absolute;
+                    top: 50%;
+                    right: 10px;
+                    transform: translateY(-50%)
+                }
+                .chackEmailShow{
+                    opacity: 1;
+                }
+                .shake-horizontal {
+                    -webkit-animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+                    animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+                }
             }
             .contact-text{
                 @extend .contact-nombre;
@@ -317,6 +333,66 @@ main{
                     max-height: 100px;
                 }.contact-text-label{
                     @extend .contact-nombre-label;
+                }
+            }
+            .buttonContacto{
+                position: absolute;
+                background-color: transparent;
+                bottom: -60px;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 60%;
+                height: 40px;
+                border: none;
+                box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+                transition: all 500ms ease;
+                cursor: pointer;
+                outline: none;
+                font-size: 1rem;
+                overflow: hidden;
+                span {
+                    position: absolute;
+                    background: #000000;;
+                    transition: .5s;
+                    &:nth-child(1) {
+                        width: 100%;
+                        height: 2px;
+                        top: 0;
+                        left: -100%;
+                    }
+                    &:nth-child(2) {
+                        width: 100%;
+                        height: 2px;
+                        bottom: 0;
+                        right: -100%;
+                    }
+                    &:nth-child(3) {
+                        width: 2px;
+                        height: 100%;
+                        bottom: -100%;
+                        left: 0;
+                    }
+                    &:nth-child(4) {
+                        width: 2px;
+                        height: 100%;
+                        top: -100%;
+                        right: 0;
+                    }
+                }
+                &:hover span:nth-child(1) {
+                    left: 0;
+                }
+                &:hover span:nth-child(2) {
+                    right: 0;
+                }
+                &:hover span:nth-child(3) {
+                    bottom: 0;
+                }
+                &:hover span:nth-child(4) {
+                    top: 0;
+                }
+                &:hover{
+                    font-size: 1.1rem;
                 }
             }
         }
