--- a/sass/@keyframes.scss
+++ b/sass/@keyframes.scss
@@ -63,3 +63,15 @@
             transform: translateX(-8px);
   }
 }
+
+@keyframes showMensaje{
+  0%{
+    opacity: 0;
+  }
+  50%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 0;
+  }
+}
