--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -1,13 +1,30 @@
-footer{
-    position: absolute;
+.footer{
     width: 100%;
     text-align: right;
-    bottom: 7px;
-    left: 48%;
-    transform: translate(-52%, 0%);
-    .copyright{
-        font-size: 10px;
-        font-weight: 600;
-        color: #ffffff;
+    background-color: #a80000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .line{
+        width: 90%;
+        border: 1px solid #000000;
+    }
+    .copy{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 90%;
+        margin: auto;
+        padding: 10px 0px;
+        color: #000000;
+        .footerDisen{
+            a{
+            font-size: 1.5rem;
+            font-family: Pablo;
+            text-decoration: none;
+            color: inherit;
+            }
+        }
     }
 }
