--- a/sass/home.scss
+++ b/sass/home.scss
@@ -247,15 +247,32 @@ main{
     .contact-conten{
         display: flex;
         flex-direction: column;
-        gap: 30px;
+        gap: 25px;
         justify-content: center;
         align-items: center;
         background-color: #a80000;
         width: 100%;
-        height: 350px;
+        height: 460px;
         position: relative;
         z-index: 0;
-        padding-bottom: 50px;
+        padding: 50px 0px;
+        .wabeContact{
+            position: absolute;
+            width: 100%;
+            top: -20px;
+            left: 0;
+            transform: rotate(180deg);
+            img{
+                width: 100%;
+                height: 100px;
+            }
+        }
+        h3{
+            font-size: 3rem;
+            font-family: Logo;
+            font-weight: 500;
+            text-align: center;
+        }
         .form-contact{
             position: relative;
             display: flex;
@@ -291,6 +308,21 @@ main{
                     left: 0;
                     font-size: 0.7rem;
                 }
+                .contact-nombre-mensaje{
+                    position: absolute;
+                    bottom: -25px;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    font-size: 0.8rem;
+                    width: 80%;
+                    text-align: center;
+                    background-color: #00000085;
+                    color: #ffffff;
+                    border-radius: 6px;
+                    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.45em, 
+                    rgba(90, 125, 188, 0.05) 0px 0.45em 1em;
+                    opacity: 0;
+                }
             }
             .contact-email{
                 @extend .contact-nombre;
@@ -323,6 +355,9 @@ main{
                     -webkit-animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
                     animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
                 }
+                .contact-email-mensaje{
+                    @extend .contact-nombre-mensaje;
+                }
             }
             .contact-text{
                 @extend .contact-nombre;
@@ -334,11 +369,29 @@ main{
                 }.contact-text-label{
                     @extend .contact-nombre-label;
                 }
+                .contact-text-mensaje{
+                    @extend .contact-nombre-mensaje;
+                }
+            }
+            .contact-enviado-mensaje{
+                position: absolute;
+                bottom: -95px;
+                left: 50%;
+                transform: translateX(-50%);
+                font-size: 0.8rem;
+                width: 80%;
+                text-align: center;
+                background-color: #00000085;
+                color: #ffffff;
+                border-radius: 6px;
+                box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.45em, 
+                rgba(90, 125, 188, 0.05) 0px 0.45em 1em;
+                opacity: 0;
             }
             .buttonContacto{
                 position: absolute;
                 background-color: transparent;
-                bottom: -60px;
+                bottom: -70px;
                 left: 50%;
                 transform: translateX(-50%);
                 width: 60%;
@@ -394,6 +447,9 @@ main{
                 &:hover{
                     font-size: 1.1rem;
                 }
+            }
+            .show{
+                animation: showMensaje 5s ;
             }
         }
     }
