--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 @font-face {font-family: Logo; src:url("../../font/BlackZone-lgGze.otf") format("truetype");}
+@font-face {font-family: Pablo;src:url("../../font/TheScientist-L3EyW.ttf")  format("truetype");}
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 @import 'general';
 @import 'nav';
